[package]
name = "diesel_timings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
diesel = { version = "2.2.4", features = ["postgres"] }
regex = "1.11.1"
uuid = { version = "1.11.0", features = ["v4"] }
