[package]
name = "diesel_timings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.4", features = ["postgres"] }
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
time = { version = "0.3.36", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4"] }
